hphp/hack/test/typecheck/tconst/cannot_assign_tparam1.php.exp
ERROR: File "cannot_assign_tparam1.php", line 4, characters 19-19:
A type constant cannot use type parameters (NastCheck[3027])
  File "cannot_assign_tparam1.php", line 3, characters 9-9:
  `T` was declared as a type parameter here
