hphp/hack/test/typecheck/tconst/cannot_assign_tparam1.php
<?hh // strict

class A<T> {
  private type const Ta = T;
}
